[tool.poetry]
name = "gef-portal-scraper"
version = "0.1.0"
description = ""
authors = ["Sawyer <sawyerczupka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dask = { extras = ["distributed"], version = "^2024.9.1" }
beautifulsoup4 = "^4.12.3"
selenium = "^4.25.0"
sqlmodel = "^0.0.22"
requests = "^2.32.3"
bokeh = "^3.6.0"
aiohttp = "^3.10.10"
ujson = "^5.10.0"
backoff = "^2.2.1"
aiolimiter = "^1.1.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
