[tool.poetry]
name = "k8s-autoscaler"
version = "0.1.0"
description = ""
authors = ["Sawyer <sawyer@teamculture.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
httpx = "^0.27.2"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
