[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
together = "^0.2.11"
python-dotenv = "^1.0.1"
llama-index-core = "^0.10.12"
llama-index-llms-together = "^0.1.3"
mysqlclient = "^2.1.1"
sqlmodel = "^0.0.16"
llama-index-program-openai = "^0.1.4"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
